<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">


            <Button
                android:id="@+id/button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"

                android:layout_below="@+id/et_lpassword"
                android:layout_centerHorizontal="true"

                android:background="@drawable/buttonbg"
                android:onClick="onLogin"
                android:text="@string/login"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/et_lemail"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingEnd="25dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"

                android:textColorLink="@color/black_overlay"
                android:textIsSelectable="false" />

            <EditText
                android:id="@+id/et_lpassword"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/et_lemail"
                android:layout_alignStart="@+id/et_lemail"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingEnd="25dp"
                android:paddingStart="20dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginTop="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/niryat"
                android:contentDescription="@string/todo" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"

                android:layout_centerHorizontal="true"
                android:onClick="onRegister"
                android:text="@string/create_new_account"
                android:textColor="#284E8F"
                android:textSize="18sp" />

        </RelativeLayout>
</RelativeLayout>
    </ScrollView>
