<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Finalstat"
    android:fillViewport="true">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="60dp"
            android:text="@string/total"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:onClick="onVis"
            android:text="@string/mins"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toEndOf="@+id/button8"
            android:ems="10"
            android:inputType="text|number" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView5"
            android:layout_below="@+id/textView6"
            android:layout_marginStart="6dp"
            android:layout_marginTop="35dp"
            android:text="@string/fsval"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignStart="@+id/editText5"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/editText9"
            android:layout_marginTop="35dp"
            android:text="@string/tax"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText18"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignStart="@+id/editText9"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/editText18"
            android:layout_marginTop="35dp"
            android:text="@string/cert"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText19"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignStart="@+id/editText18"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="35dp"
            android:text="@string/modet"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignStart="@+id/editText19"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/buttonbg"
            android:layout_marginBottom="5dp"
            android:onClick="onMove"
            android:text="Home"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>